--- a/theme/base/src/main/AndroidManifest.xml
+++ b/theme/base/src/main/AndroidManifest.xml
@@ -1,5 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.guichristovao.poke_themes">
-
-</manifest>
+<manifest package="com.guichristovao.poke_themes.base" />
