:sparkles: Add green brand theme

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = "poke-themes"
 include ':app'
 include ':theme:base'
 include ':theme:brand:blue'
+include ':theme:brand:green'
 include ':theme:brand:red'
