:sparkles: Add yellow brand theme

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include ':theme:base'
 include ':theme:brand:blue'
 include ':theme:brand:green'
 include ':theme:brand:red'
+include ':theme:brand:yellow'
