:sparkles: Add player component

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include ':theme:brand:blue'
 include ':theme:brand:green'
 include ':theme:brand:red'
 include ':theme:brand:yellow'
+include ':component:player'
